--- a/css/header.css
+++ b/css/header.css
@@ -13,7 +13,7 @@
   text-decoration: none;
   outline:none;
   border:none;
-  transition: all .2s ease-out;
+  transition: all .2s linear;
 }
 
 *::selection{
@@ -35,7 +35,13 @@ section{
 body{
   overflow-x: hidden;
   background-color:var(--black);
+  color: var(--white);
 }
+
+.dark-mode {
+    background-color: var(--white);
+    color: var(--black);
+  }
 
 .btn {
   display: inline-block;
@@ -66,6 +72,7 @@ header{
   position: fixed;
   top:0; left: 0; right: 0;
   background-color:var(--black);
+  color:var(--black);
   border-bottom: 0.1rem solid #ffffff78;
   z-index: 10000;
   padding:1.5rem 7%;
@@ -95,8 +102,7 @@ header .navbar a:hover{
   width: 4.5rem;
   line-height: 4.5rem;
   font-size: 2rem;
-  background: #fff;
-  color: #000;
+  color: var(--white);
   margin-left: .5rem;
   text-align: center;
   cursor: pointer;
@@ -104,20 +110,128 @@ header .navbar a:hover{
 
 .header .icons div:hover,
 .header .icons a:hover {
-  background: #cb151c;
-  color: var(--white);
+  color: var(--red);
 }
 
 .header #menu-btn {
   display: none;
 }
 
+/* Bordered form */
+form {
+    border: 3px solid #f1f1f1;
+}
 
-#menu-bars{
-  font-size: 3rem;
-  color:var(--white);
-  padding:.5rem 1.5rem;
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+#login-btn {
+  height: 4.5rem;
+  width: 4.5rem;
+  line-height: 4.5rem;
+  font-size: 2rem;
+  color: var(--white);
+  margin-left: .5rem;
+  text-align: center;
   cursor: pointer;
-  border-radius: .5rem;
+}
+
+#login-btn:hover {
+  color: var(--red);
+}
+
+.login-modal {
   display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+  padding-top: 60px;
+}
+
+.login-modal-content {
+  background-color: #0a0a0a;
+  margin: 100px auto;
+  border: none;
+  width: 50%;
+}
+
+.login-modal .close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: white;
+  font-size: 35px;
+  font-weight: bold;
+}
+
+.login-modal .close:hover,
+.login-modal .close:focus {
+  color: var(--red);
+  cursor: pointer;
+}
+
+.login-modal .title p {
+  text-align: center;
+  font-size: 25px;
+  color: white;
+  font-weight: bold;
+  margin: 24px 0 12px 0;
+  padding-top: 25px;
+}
+
+.login-modal .container {
+  padding: 16px;
+}
+
+.login-modal .container label {
+  font-size: 15px;
+  color: white;
+}
+
+.login-modal button {
+  background: var(--red);
+  color: var(--white);
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 4px;
+}
+
+.login-modal button:hover {
+  background: var(--white);
+  color: var(--red);
+  border: 2px solid var(--red);
+}
+
+.login-modal a.psw {
+  float: right;
+  color: white;
+  font-size: 15px;
+}
+
+.login-modal a.createaccount {
+  color: white;
+  font-size: 15px;
+}
+
+.login-modal a:hover {
+  color:var(--red);
+}
+
+.animate {
+  animation: fadeIn 0.5s ease;
 }
