--- a/css/style.css
+++ b/css/style.css
@@ -61,13 +61,11 @@
 
 .about .content h3 {
   font-size: 2.5rem;
-  color: var(--white);
   padding-top: 1.5rem;
 }
 
 .about .content p {
   font-size: 1.6rem;
-  color: var(--white);
   line-height: 2;
   padding: 1.5rem 0;
 }
@@ -78,7 +76,6 @@
 
 .cards p {
   font-size: 2rem;
-  color: var(--white);
   text-align: center;
   padding: 1.5rem 0;
 }
@@ -176,7 +173,7 @@
 
 .close:hover,
 .close:focus {
-    color: #f1f1f1;
+    color: var(--red);
     text-decoration: none;
     cursor: pointer;
 }
